--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <title>Stas Sribnyi | Front-End Engineer</title>
 
+    <link rel="stylesheet" href="src/css/ionicons.substitute.css" />
     <link
       rel="stylesheet"
       href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
