Optimize navigation for mobile

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Stas Sribnyi" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="description"
+      content="Hello there 😊, I am a skilled Front-End Engineer with 4+ years of working experience both with front-end and back-end. I use the best techniques from both of these two worlds in all projects I am working on using a variety of frameworks such as React and Angular. Wanna learn more what I can do?"
+    />
 
-    <title>Stas Sribnyi | Front-End Engineer</title>
+    <title>Stas Sribnyi | Front-End Engineer | Interactive Resume</title>
 
     <link rel="stylesheet" href="src/css/ionicons.substitute.css" />
     <link
@@ -73,24 +79,9 @@
         </p>
         <div class="navigation__content">
           <ul class="navigation__links">
-            <li class="navigation__links-item">
-              <a class="navigation__link" href="#about">
-                <span class="navigation__link-icon ion-person"></span>
-                <span class="navigation__link-text">/about</span>
-              </a>
-            </li>
-            <li class="navigation__links-item">
-              <a class="navigation__link" href="#skills">
-                <span class="navigation__link-icon ion-settings"></span>
-                <span class="navigation__link-text">/skills</span>
-              </a>
-            </li>
-            <li class="navigation__links-item">
-              <a class="navigation__link" href="#career">
-                <span class="navigation__link-icon ion-briefcase"></span>
-                <span class="navigation__link-text">/career</span>
-              </a>
-            </li>
+            <li><a class="navigation__link" href="#about">about</a></li>
+            <li><a class="navigation__link" href="#skills">skills</a></li>
+            <li><a class="navigation__link" href="#career">career</a></li>
           </ul>
           <a
             href="#about"
@@ -98,18 +89,8 @@
             aria-label="Move up or down"
           ></a>
           <ul class="navigation__links">
-            <li class="navigation__links-item">
-              <a class="navigation__link" href="#projects">
-                <span class="navigation__link-icon ion-erlenmeyer-flask"></span>
-                <span class="navigation__link-text">/projects</span>
-              </a>
-            </li>
-            <li class="navigation__links-item">
-              <a class="navigation__link" href="#contacts">
-                <span class="navigation__link-icon ion-at"></span>
-                <span class="navigation__link-text">/contacts</span>
-              </a>
-            </li>
+            <li><a class="navigation__link" href="#projects">projects</a></li>
+            <li><a class="navigation__link" href="#contacts">contacts</a></li>
           </ul>
         </div>
       </nav>
@@ -1138,7 +1119,7 @@
             </li>
             <li>
               <a
-                href="http://github.com/stassribnyi"
+                href="https://github.com/stassribnyi"
                 class="socials__link"
                 aria-label="GitHub"
               >
@@ -1206,6 +1187,45 @@
           </form>
         </div>
       </div>
+
+      <nav class="navigation navigation--bottom">
+        <ul class="navigation__links">
+          <li>
+            <a href="#about" class="navigation__link">
+              <span class="navigation__link-icon ion-person"></span>
+              <span class="navigation__link-text">about</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#skills" class="navigation__link">
+              <span class="navigation__link-icon ion-settings"></span>
+              <span class="navigation__link-text">skills</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#career" class="navigation__link">
+              <span class="navigation__link-icon ion-briefcase"></span>
+              <span class="navigation__link-text">career</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#projects" class="navigation__link">
+              <span class="navigation__link-icon ion-erlenmeyer-flask"></span>
+              <span class="navigation__link-text">projects</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#contacts" class="navigation__link">
+              <span class="navigation__link-icon ion-at"></span>
+              <span class="navigation__link-text">contacts</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </footer>
 
     <script src="src/js/main.js"></script>
